# advent_of_code_2021

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
C/:dev/advent_of_code/: CMakeCache.txt
scripts/: post_build.py
src/: CMakeLists.txt  day_01.cpp  day_01.hpp  day_02.cpp  day_02_input.txt  day_03.cpp  day_04.cpp  day_05.cpp  day_06.cpp  day_07.cpp  day_08.cpp  day_08.hpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
utils/: BaseTypes.h  CMakeLists.txt  Timer.cpp  Timer.h  Utils.h  base_types.h  pch.h  timer.cpp  timer.h
